Add Base64 support.